--- a/gen/build.gradle
+++ b/gen/build.gradle
@@ -13,12 +13,6 @@
  *
  */
 
-rootProject.name = 'PTerrain'
-
-include 'api'
-include 'gen'
-include 'impl'
-include 'impl:nukkitx'
-
-findProject(':impl:nukkitx')?.name = 'NukkitX'
-
+dependencies {
+    compile project(":api")
+}
